blocks/columns/columns.css
.columns > div {
  display: flex;
  flex-direction: column;
  gap: var(--space-m);
}

.columns > div:not(:has(.media-wrapper)) {
  gap: var(--space-l);
}

.columns .media-wrapper {
  align-self: center;
  order: 0;
}

.columns .body-wrapper {
  order: 1;
}

.columns .media-wrapper img {
  object-fit: contain;
}

.columns .media-wrapper[data-orientation="landscape"] img {
  max-height: 300px;
  width: 100%;
  aspect-ratio: 16 / 9;
}

.columns .media-wrapper[data-orientation="portrait"] img {
  height: 100%;
  max-width: 300px;
  aspect-ratio: 3 / 4;
}

@media (width >= 600px) {
  .columns.cols-even > div {
    flex-direction: unset;
  }

  .columns.cols-even > div > div {
    flex: 1;
    order: unset;
    min-width: 0;
  }
}

@media (width >= 900px) {
  .columns.cols-3 > div {
    flex-direction: unset;
  }

  .columns.cols-3 > div > div {
    flex: 1;
    order: unset;
    min-width: 0;
  }
}

@media (width >= 1200px) {
  .columns > div {
    flex-direction: unset;
  }

  .columns > div > div {
    flex: 1;
    order: unset;
    min-width: 0;
  }
}

